--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "vite-plugin-adsense": "^1.1.1",
     "vite-plugin-ejs": "^1.7.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0",
-    "whatwg-fetch": "^3.6.20"
+    "vitest": "^1.6.0"
   },
   "prettier": {
     "printWidth": 100
